crates/ferrum-interfaces/tests/ui/vnext/fail/prepared_family_is_not_deserialize.rs
use ferrum_interfaces::vnext::PreparedModelFamily;

fn main() {
    let _: PreparedModelFamily = serde_json::from_str("{}").unwrap();
}
